cloud-infra/modules/vpc/internetGateway.tf
resource "aws_internet_gateway" "IGW" {
  vpc_id = aws_vpc.myvpc.id
   tags = {
    Name = "IG"
  }
 }
